Fix some table columns not wrapping

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -200,6 +200,10 @@ mat-icon {
             padding: 0 12px!important;
         }
 
+        .mat-column-expandedDetail {
+            white-space: normal;
+        }
+
         .status-icon {
             cursor: default;
             user-select: none;
